<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/iv_crawford"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:contentDescription="@string/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/crawfordlogo"
        app:tint="@android:color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/txtusername"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="330dp"
            android:layout_height="28dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/network_id"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:labelFor="@+id/ed_username" />

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txtpassword"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="330dp"
            android:layout_height="28dp"
            android:background="@android:color/white"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:labelFor="@id/ed_password"
            android:visibility="gone"
            tools:inputType="textPassword" />

        <TextView
            android:id="@+id/txt_forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/txtforgotpassword"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="330dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorbtn"
            android:text="@string/btnlogin"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>